added docker-compose.yaml, and update .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,15 @@
+Настрока основной БД
+
 DB_USER="Логин от БД"
 DB_PASSWORD="Пароль от БД"
 DB_HOST="Хост БД"
 DB_PORT="Порт БД"
 DB_NAME="Имя БД"
+
+Настройка тестовой БД
+
+TEST_DB_USER = "Логин от тестовой БД"
+TEST_DB_PASSWORD = "Пароль от тестовой БД"
+TEST_DB_HOST = "Хост тестовой БД"
+TEST_DB_PORT = "Порт тестовой БД"
+TEST_DB_NAME = "Имя тестовой БД"
